--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ env:
   GOVERSION: 1.20.x
   NODEVERSION: 16.x
   PYTHONVERSION: "3.9"
-  DOTNETVERSION: 6.0
+  DOTNETVERSION: 6.0.x
   JAVAVERSION: "11"
 jobs:
   prerequisites:
