--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,9 +43,8 @@ jobs:
     steps:
     - name: Checkout Repo
       uses: actions/checkout@v3
-
-    - name: Unshallow clone for tags
-      run: git fetch --prune --unshallow --tags
+      with:
+        fetch-depth: 0
 
     - name: Install Go
       uses: actions/setup-go@v3
