--- a/sdk/nodejs/package.json
+++ b/sdk/nodejs/package.json
@@ -11,8 +11,7 @@
     "repository": "https://github.com/pulumiverse/pulumi-matchbox",
     "license": "Apache-2.0",
     "scripts": {
-        "build": "tsc",
-        "install": "node scripts/install-pulumi-plugin.js resource matchbox ${VERSION}"
+        "build": "tsc"
     },
     "dependencies": {
         "@pulumi/pulumi": "^3.0.0"
