--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 Pulumi.*.yaml
 **/node_modules/
 .DS_Store
+go.work*
 
 **/command-output/
 
@@ -21,6 +22,8 @@ provider/**/schema-embed.json
 **/version.txt
 **/nuget
 **/dist
-server
 
-go.work*
+__pycache__
+venv
+sdk/python/build
+sdk/python/*.egg-info
