--- a/sdk/dotnet/Pulumiverse.Matchbox.csproj
+++ b/sdk/dotnet/Pulumiverse.Matchbox.csproj
@@ -9,6 +9,7 @@
     <PackageProjectUrl>https://www.pulumi.com</PackageProjectUrl>
     <RepositoryUrl>https://github.com/pulumiverse/pulumi-matchbox</RepositoryUrl>
     <PackageIcon>logo.png</PackageIcon>
+    <Version>0.0.0-alpha.0+dev</Version>
 
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
