--- a/sdk/nodejs/package.json
+++ b/sdk/nodejs/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@pulumiverse/matchbox",
-    "version": "${VERSION}",
+    "version": "0.0.0-alpha.0+dev",
     "description": "A Pulumi package for creating and managing the Matchbox iPXE server.",
     "keywords": [
         "pulumi",
@@ -24,6 +24,7 @@
     "pulumi": {
         "resource": true,
         "name": "matchbox",
+        "version": "0.0.0-alpha.0+dev",
         "server": "github://api.github.com/pulumiverse"
     }
 }
