--- a/.upgrade-config.yml
+++ b/.upgrade-config.yml
@@ -3,5 +3,5 @@
 ---
 upstream-provider-name: terraform-provider-matchbox
 upstream-provider-org: poseidon
-pulumi-infer-version: true
+pulumi-infer-version: false
 remove-plugins: true
