Convert TF examples using `pulumi convert` & converter plugin

--- a/.ci-mgmt.yaml
+++ b/.ci-mgmt.yaml
@@ -6,6 +6,10 @@ providerDefaultBranch: main
 upstreamProviderOrg: poseidon
 publishRegistry: false
 enableAutoRelease: false
+plugins:
+  - name: terraform
+    version: "1.0.19"
+    kind: converter
 languages:
   - dotnet
   - go
@@ -19,3 +23,4 @@ publish:
     # Package is licensed under Apache 2.0 but license is not picked up correctly by the license detector
     # - github.com/OpenDNS/vegadns2client
 pr-assign: ringods
+pulumiConvert: 1
