--- a/.github/workflows/prerequisites.yml
+++ b/.github/workflows/prerequisites.yml
@@ -76,7 +76,7 @@ jobs:
         EOF=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
         {
           echo "SCHEMA_CHANGES<<$EOF";
-          schema-tools compare -p matchbox -o ${{ inputs.default_branch }} -n --local-path=provider/cmd/pulumi-resource-matchbox/schema.json;
+          schema-tools compare -r github://api.github.com/pulumiverse -p matchbox -o ${{ inputs.default_branch }} -n --local-path=provider/cmd/pulumi-resource-matchbox/schema.json;
           echo "$EOF";
         } >> "$GITHUB_ENV"
     - if: inputs.is_pr && inputs.is_automated == false
